--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ highlighter: 'pygments'
 #paginate: 8
 permalink: /:title
 
-title: le fabuleux destin d'Yann
-url: http://camscofie.github.io
+title: Lucyliu21.com
+url: http://lucyliu21.github.io
 feed: /atom.xml
-author_info: <a href="http://camscofie.github.io/">Yannch</a>
+author_info: <a href="http://lucyliu21.github.io/">lucyliu21</a>
